logs/BlossomV_0.3.log
>>> 'Pkg.add("BlossomV")' log
INFO: Cloning cache of BlossomV from git://github.com/mlewe/BlossomV.jl.git
INFO: Installing BlossomV v0.0.3
INFO: Building BlossomV
INFO: Attempting to Create directory /home/vagrant/.julia/v0.3/BlossomV/deps/downloads
INFO: Downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.05.src.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0100 47922  100 47922    0     0  24781      0  0:00:01  0:00:01 --:--:-- 24778
INFO: Done downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.05.src.tar.gz
INFO: Attempting to Create directory /home/vagrant/.julia/v0.3/BlossomV/deps/src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.3/BlossomV/deps
INFO: Directory /home/vagrant/.julia/v0.3/BlossomV/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.3/BlossomV/deps/src/blossom5-v2.05.src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.3/BlossomV/deps/usr/lib
patching file Makefile
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  example.cpp -c -o example.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  interface.cpp -c -o interface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  misc.cpp -c -o misc.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMduals.cpp -c -o PMduals.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMexpand.cpp -c -o PMexpand.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinit.cpp -c -o PMinit.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinterface.cpp -c -o PMinterface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMmain.cpp -c -o PMmain.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMrepair.cpp -c -o PMrepair.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMshrink.cpp -c -o PMshrink.o
interface.cpp: In function ‘matching* matching_construct(int32_t, int32_t)’:
interface.cpp:25:14: error: ‘make_unique’ is not a member of ‘std’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
              ^
interface.cpp:25:39: error: expected primary-expression before ‘>’ token
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                       ^
interface.cpp:25:65: error: request for member ‘release’ in ‘(0, edge_num_max)’, which is of non-class type ‘int32_t {aka int}’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                                                 ^
make: *** [interface.o] Error 1
make: *** Waiting for unfinished jobs....
==============================[ ERROR: BlossomV ]===============================

failed process: Process(setenv(`make -j8 all`,Union(UTF8String,ASCIIString)["PYTHON=","PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/","PWD=/vagrant/0.3AL","SHELL=/bin/bash","SSH_CONNECTION=10.0.2.2 53898 10.0.2.15 22","LD_LIBRARY_PATH=:/usr/local/lib/","MAIL=/var/mail/vagrant","LANG=en_US.UTF-8","SHLVL=3","LOGNAME=vagrant","XDG_RUNTIME_DIR=/run/user/1000","XDG_SESSION_ID=3","OLDPWD=/home/vagrant","SSH_CLIENT=10.0.2.2 53898 22","_=/usr/bin/timeout","USER=vagrant","TERM=vt100","HOME=/home/vagrant","JAVA_HOME=/usr/lib/jvm/java-7-oracle"]), ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.3/BlossomV/deps/build.jl, in expression starting on line 28

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: BlossomV had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.3
 - build the package(s) and all dependencies with `Pkg.build("BlossomV")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated

>>> 'Pkg.test("BlossomV")' log
Julia Version 0.3.12
Commit 80aa779 (2015-10-26 12:41 UTC)
Platform Info:
  System: Linux (x86_64-unknown-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-93-generic #140-Ubuntu SMP Mon Jul 18 21:21:05 UTC 2016 x86_64 x86_64
Memory: 2.4471054077148438 GB (537.50390625 MB free)
Uptime: 5258.0 sec
Load Avg:  1.1064453125  1.05712890625  0.9921875
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3500 MHz     169444 s         97 s      28820 s     273547 s         14 s
#2  3500 MHz     130704 s         37 s      26275 s     341574 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas
  LIBM: libopenlibm
  LLVM: libLLVM-3.3
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.3
4 required packages:
 - BlossomV                      0.0.3
 - Cairo                         0.2.34
 - HttpParser                    0.0.13
 - JSON                          0.6.1
12 additional packages:
 - BinDeps                       0.3.21
 - ColorTypes                    0.1.7
 - Colors                        0.5.4
 - Compat                        0.8.8
 - Dates                         0.3.2
 - Docile                        0.5.23
 - FixedPointNumbers             0.0.12
 - Graphics                      0.1.0
 - HttpCommon                    0.1.2
 - Reexport                      0.0.3
 - SHA                           0.2.1
 - URIParser                     0.0.7
INFO: Testing BlossomV
ERROR: BlossomV not properly installed. Please run Pkg.build("BlossomV")
 in error at error.jl:21
 in include at ./boot.jl:245
 in include_from_node1 at ./loading.jl:128
 in reload_path at loading.jl:152
 in _require at loading.jl:67
 in require at loading.jl:51
 in include at ./boot.jl:245
 in include_from_node1 at loading.jl:128
 in process_options at ./client.jl:285
 in _start at ./client.jl:354
while loading /home/vagrant/.julia/v0.3/BlossomV/src/BlossomV.jl, in expression starting on line 6
while loading /home/vagrant/.julia/v0.3/BlossomV/test/runtests.jl, in expression starting on line 1
==============================[ ERROR: BlossomV ]===============================

failed process: Process(`/home/vagrant/julia/bin/julia /home/vagrant/.julia/v0.3/BlossomV/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
INFO: No packages to install, update or remove
ERROR: BlossomV had test errors
 in error at error.jl:21
 in test at pkg/entry.jl:718
 in anonymous at pkg/dir.jl:28
 in cd at ./file.jl:20
 in cd at pkg/dir.jl:28
 in test at pkg.jl:67
 in process_options at ./client.jl:213
 in _start at ./client.jl:354

>>> End of log
